[gd_scene load_steps=12 format=3 uid="uid://da67renlddpvn"]

[ext_resource type="Script" uid="uid://c2ku3n7f1ug0t" path="res://Objects/pickup.gd" id="1_srn13"]
[ext_resource type="Texture2D" uid="uid://53cb0rg6a3bv" path="res://assets/icon.svg" id="2_uoaj8"]
[ext_resource type="Texture2D" uid="uid://c1srv4uhfqomr" path="res://assets/button.png" id="3_l8kga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5j7m4"]
size = Vector2(128, 89)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j7m4"]
atlas = ExtResource("3_l8kga")
region = Rect2(10, 8, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_058xg"]
atlas = ExtResource("3_l8kga")
region = Rect2(42, 8, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eq6vk"]
atlas = ExtResource("3_l8kga")
region = Rect2(10, 40, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5t0q4"]
atlas = ExtResource("3_l8kga")
region = Rect2(42, 40, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyk0m"]
atlas = ExtResource("3_l8kga")
region = Rect2(10, 72, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo0vv"]
atlas = ExtResource("3_l8kga")
region = Rect2(42, 72, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yoojv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j7m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_058xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eq6vk")
}],
"loop": false,
"name": &"Pressed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5t0q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyk0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo0vv")
}],
"loop": false,
"name": &"Unpressed",
"speed": 5.0
}]

[node name="Pickup" type="Node2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_srn13")

[node name="downArrow" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -396.66666)
texture = ExtResource("2_uoaj8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -22)
shape = SubResource("RectangleShape2D_5j7m4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_yoojv")
animation = &"Pressed"
frame = 2
frame_progress = 1.0
speed_scale = 4.0

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(0, -17.5)
shape = SubResource("RectangleShape2D_5j7m4")
debug_color = Color(0.7941012, 0.07402735, 0.99999994, 0.41960785)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
